feat: update uikit library

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Strite NFT</title>
+    <title>Kukai</title>
     <meta content="The Ultimate NFT Social Marketplace" name="description" />
     <meta
-      content="Strite - The Ultimate NFT Social Marketplace"
+      content="Kukai - The Ultimate NFT Social Marketplace"
       property="og:title"
     />
     <meta
@@ -12,7 +12,7 @@
       property="og:description"
     />
     <meta
-      content="Strite - The Ultimate NFT Social Marketplace"
+      content="Kukai - The Ultimate NFT Social Marketplace"
       property="twitter:title"
     />
     <meta property="og:type" content="website" />
